<resources>
    <string name="app_name">InventoryApp</string>

    <string name="app_label">Book Store</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all">Delete All Books</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Title for the activity to edit existing book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for editor overflow menu option that gives user option to call supplier [CHAR LIMIT = 20] -->
    <string name="action_call">Call</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_about">About Book</string>

    <!-- Label for book type in the editor [CHAR LIMIT=30] -->
    <string name="category_type">Type of Book</string>

    <!-- Text hint for title field in the editor[CHAR LIMIT=30] -->
    <string name="hint_book_title">Title</string>

    <!-- Text hint for author field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_author">Author</string>

    <!-- Header for price field in catalog view -->
    <string name="cost">Price: </string>

    <!-- Text hint for price field [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_information">Supplier Information</string>

    <!-- Label for stock category in editor [CHAR LIMIT=30] -->
    <string name="category_stock">Number in Stock</string>

    <!-- Label for quantity in list_item.xml Catalog view [CHAR LIMIT=30] -->
    <string name="quantity_view">In stock: </string>

    <!-- TextView for quantity(number in stock?) in the editor [CHAR LIMIT=30] -->
    <string name="quantity">Enter quantity</string>

    <!-- Button text for increasing the quantity of books in stock [CHAR LIMIT=1] -->
    <string name="increment">+</string>

    <!-- Button text for decreasing the quantity of books in stock [CHAR LIMIT=1] -->
    <string name="decrement">-</string>

    <!-- For updating quantity view -->
    <string name="zero">0</string>

    <!-- Toast message for when user tries to enter a negative number for number in stock -->
    <string name="toast_not_zero">Please enter a value for quantity of books in stock.</string>

    <!-- Button text for when the user wants to sell an item (book) -->
    <string name="sell">Sell Item</string>

    <!-- Toast message alerting user there was an error with the sale -->
    <string name="sale_error">There was an error processing the sale of this item. Please try again.</string>

    <!-- Toast message alerting user the sale was a success -->
    <string name="sale_success">This item was sold successfully.</string>

    <!-- Toast alerting user that you cannot sell what you don't have -->
    <string name="toast_sales">There are currently none of this item left in stock.</string>

    <!-- Text hint for supplier name [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier phone number [CHAR LIMIT=12] -->
    <string name="hint_supplier_number">Supplier Phone Number</string>

    <!-- Label for dropdown menu option if the book's type is unknown [CHAR LIMIT=20] -->
    <string name="type_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the book has a hardcover [CHAR LIMIT=20] -->
    <string name="type_hardcover">Hardcover</string>

    <!-- Label for dropdown menu option if the book is a paperback [CHAR LIMIT=20] -->
    <string name="type_paperback">Paperback</string>

    <!-- Toast if insertBook() was successful -->
    <string name="toast_success">Book saved with id: 1</string>

    <!-- Toast if insertBook() was unsuccessful -->
    <string name="toast_fail">Error with saving book</string>

    <!-- Toast message for when update is successful  -->
    <string name="update_success">The book has been successfully updated.</string>

    <!-- Toast message for when update is unsuccessful  -->
    <string name="update_fail">Failed to update book.</string>

    <!-- Dialog message when user's leaving editor but hasn't saved changes [CHAR LIMIT=20] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for option to discard changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for option to keep editing [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message to appear when user tries to save a book without entering all of the information -->
    <string name="toast_enter_all_fields">Please enter a value for each field before saving book.</string>

    <!-- Empty View title text -->
    <string name="empty_view_title_text">It\'s a bit lonely here…</string>

    <!-- Empty View subtitle text -->
    <string name="empty_view_subtitle_text">Get started by adding a book. \nEither open the overflow menu on the \ntop right or click the green button!</string>

    <!-- Dialog message to ask user to confirm deleting current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog message to ask user to confirm deletion of current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for option to cancel deletion of current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
</resources>
