<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditProductsActivity">

    <!-- Book Information Category Label -->

    <TextView
        android:id="@+id/textView5"
        style="@style/CategoryStyle"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:text="@string/category_about"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title Input Field -->
    <EditText
        android:id="@+id/edit_book_title"
        style="@style/EditorFieldStyle"
        android:layout_width="@dimen/edit_width"
        android:hint="@string/hint_book_title"
        android:inputType="textCapWords"
        app:layout_constraintLeft_toRightOf="@id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <!-- Author Input Field -->
    <EditText
        android:id="@+id/edit_book_author"
        style="@style/EditorFieldStyle"
        android:layout_width="@dimen/edit_width"
        android:hint="@string/hint_book_author"
        android:inputType="textCapWords"
        app:layout_constraintLeft_toRightOf="@id/textView5"
        app:layout_constraintTop_toBottomOf="@id/edit_book_title"
        tools:ignore="Autofill" />

    <!-- Price Input Field -->
    <EditText
        android:id="@+id/edit_book_price"
        style="@style/EditorFieldStyle"
        android:layout_width="@dimen/edit_width"
        android:hint="@string/hint_book_price"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toRightOf="@id/textView5"
        app:layout_constraintTop_toBottomOf="@id/edit_book_author"
        tools:ignore="Autofill" />


    <!-- Type of Book Category Label -->
    <TextView
        android:id="@+id/textView6"
        style="@style/CategoryStyle"
        android:layout_width="@dimen/label_width"
        android:text="@string/category_type"
        app:layout_constraintRight_toLeftOf="@id/spinner_type"
        app:layout_constraintTop_toBottomOf="@id/edit_book_price" />

    <!-- Input field -->


    <!-- Book Type drop-down spinner -->
    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="@dimen/editor_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spinner_margin"
        android:paddingRight="@dimen/spinner_padding"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@id/textView6"
        app:layout_constraintLeft_toRightOf="@id/textView6"
        tools:ignore="RtlHardcoded,RtlSymmetry" />


    <!-- Stock Category Label -->
    <TextView
        android:id="@+id/textView7"
        style="@style/CategoryStyle"
        android:layout_width="@dimen/label_width"
        android:text="@string/category_stock"
        app:layout_constraintRight_toLeftOf="@id/book_quantity"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <!-- Quantity Input Field -->
    <EditText
        android:id="@+id/book_quantity"
        style="@style/EditorFieldStyle"
        android:layout_width="@dimen/quantity_width"
        android:layout_marginTop="@dimen/quantity_margin"
        android:hint="@string/quantity"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/textView7"
        app:layout_constraintLeft_toRightOf="@id/textView7"
        app:layout_constraintTop_toBottomOf="@id/spinner_type"
        tools:ignore="Autofill" />

    <!-- Decrease Quantity Button -->
    <Button
        android:id="@+id/decrease_quantity"
        android:layout_width="@dimen/width_height"
        android:layout_height="@dimen/width_height"
        android:text="@string/decrement"
        app:layout_constraintBottom_toBottomOf="@id/textView7"
        app:layout_constraintLeft_toRightOf="@id/book_quantity"
        app:layout_constraintRight_toLeftOf="@id/increase_quantity"
        app:layout_constraintTop_toBottomOf="@id/spinner_type" />

    <!-- Increase Quantity Button -->
    <Button
        android:id="@+id/increase_quantity"
        android:layout_width="@dimen/width_height"
        android:layout_height="@dimen/width_height"
        android:text="@string/increment"
        app:layout_constraintBottom_toBottomOf="@id/textView7"
        app:layout_constraintLeft_toRightOf="@id/decrease_quantity"
        app:layout_constraintTop_toBottomOf="@id/spinner_type" />

    <!-- Information Category Label -->
    <TextView
        android:id="@+id/textView8"
        style="@style/CategoryStyle"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:text="@string/category_information"
        app:layout_constraintRight_toLeftOf="@id/edit_supplier_name"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <!-- Name of Supplier Input Field -->
    <EditText
        android:id="@+id/edit_supplier_name"
        style="@style/EditorFieldStyle"
        android:layout_width="@dimen/edit_width"
        android:hint="@string/hint_supplier_name"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toBottomOf="@id/textView8"
        app:layout_constraintLeft_toRightOf="@id/textView8"
        app:layout_constraintTop_toBottomOf="@id/book_quantity"
        tools:ignore="Autofill" />

    <!-- Contact Supplier Input Field -->
    <EditText
        android:id="@+id/edit_supplier_number"
        style="@style/EditorFieldStyle"
        android:layout_width="@dimen/edit_width"
        android:hint="@string/hint_supplier_number"
        android:inputType="phone"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/textView8"
        app:layout_constraintTop_toBottomOf="@id/edit_supplier_name"
        tools:ignore="Autofill" />
</android.support.constraint.ConstraintLayout>