<?xml version="1.0" encoding="utf-8"?>
<!-- Options menu for the EditProductsActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditProductsActivity">

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/baseline_done_white_48dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/baseline_delete_white_48dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_call"
        android:title="@string/action_call"
        android:icon="@drawable/baseline_call_white_48dp"
        app:showAsAction="ifRoom" />
</menu>