<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".MainActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/layout_padding"
            android:paddingRight="@dimen/layout_padding"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_title"
                android:hint="@string/hint_book_title"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Breed field -->
            <EditText
                android:id="@+id/edit_book_author"
                android:hint="@string/hint_book_author"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_book_price"
                android:hint="@string/hint_book_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_type"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_type"
                android:layout_height="@dimen/spinner_height"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/spinner_padding"
                android:spinnerMode="dropdown"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

    <!-- Information category -->
    <LinearLayout
        android:id="@+id/container_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_information"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/layout_padding"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <EditText
                android:id="@+id/edit_book_quantity"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>


            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="text"
                style="@style/EditorFieldStyle"
                android:layout_below="@id/edit_book_quantity"/>

            <EditText
                android:id="@+id/edit_supplier_number"
                android:hint="@string/hint_supplier_number"
                android:inputType="phone"
                style="@style/EditorFieldStyle"
                android:layout_below="@+id/edit_supplier_name"/>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>