<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_left"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/titleColor"
        app:layout_constraintEnd_toStartOf="@+id/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />


    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/summaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin"
        app:layout_constraintTop_toTopOf="@+id/title"
        android:fontFamily="sans-serif"
        android:text="@string/quantity_view"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/quantity"
        app:layout_constraintLeft_toRightOf="@id/title"
        tools:targetApi="jelly_bean"
        android:layout_marginEnd="@dimen/margin" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/stock"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_marginRight="@dimen/margin_cost"
        android:text="@string/cost"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/quantity"
        tools:ignore="RtlHardcoded,RtlSymmetry"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/priceColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/quantity"
        tools:ignore="RtlHardcoded,RtlSymmetry"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/sell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:focusable="false"
        android:fontFamily="sans-serif"
        android:text="@string/sell"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/summary"
        tools:targetApi="jelly_bean" />


</android.support.constraint.ConstraintLayout>